# final-nn

./: README.md  digitDataset.ipynb  dnaSeqDataset.ipynb  pyproject.toml
.github/workflows/: pytest.yml
nn/: __init__.py  io.py  nn.py  preprocess.py
test/: test_nn.py
