[build-system]
requires = [
	"flit_core >=3.2,<4",
	"python_version >= '3.7'"
	]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[project]
name = "regression"
authors = [{name = "Yifei Chen", email = "Yifei.chen@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pytest", "numpy", "matplotlib", "scikit-learn", "pandas"
]

[project.urls]
Home = "https://github.com/AmazonRF/HW7-REGRESSION/"